VO issues with hidden <legend> and last explicitly labelled element within a group <fieldset> https://bugs.webkit.org/show_bug.cgi?id=96325

Reviewed by Beth Dakin.

Source/WebCore:

 When finding a <legend> for accessibility, we need to consider those that are offscreen. This patch
 modifies the original findLegend method to take a parameter to determine what should be done.

Test: accessibility/hidden-legend.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::titleUIElement):
* rendering/RenderFieldset.cpp:
(WebCore::RenderFieldset::findLegend):
* rendering/RenderFieldset.h:

LayoutTests:

* accessibility/hidden-legend-expected.txt: Added.
* accessibility/hidden-legend.html: Added.
* platform/chromium/TestExpectations:



Canonical link: https://commits.webkit.org/117844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131908 268f45cc-cd09-0410-ab3c-d52691b4dbfc