Source/WebCore/rendering/RenderFieldset.h
@@ -32,7 +32,8 @@ class RenderFieldset : public RenderBlock {
 public:
     explicit RenderFieldset(Node*);
 
-    RenderBox* findLegend() const;
+    enum FindLegendOption { IgnoreFloatingOrOutOfFlow, IncludeFloatingOrOutOfFlow };
+    RenderBox* findLegend(FindLegendOption = IgnoreFloatingOrOutOfFlow) const;
 
 private:
     virtual const char* renderName() const { return "RenderFieldSet"; }
